fixed button height of carousel on mobile

--- a/components/carousel.module.scss
+++ b/components/carousel.module.scss
@@ -39,7 +39,7 @@
   display: grid;
   grid-auto-flow: column;
   width: min-content;
-  height: min-content;
+  height: auto;
   background: #fff;
 }
 
